fix spacing issues

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ Table of contents:
 body {
     height: 100vh;
     font-family: Arial, sans-serif;
-   
+    margin: 0px;   
 
 }
 
@@ -58,8 +58,8 @@ p {
 
 
 img {
-    height: 130px;
-    width: 130px;
+    height: 140px;
+    width: 140px;
     overflow: hidden;
     border: 2px solid #3882F6;
     border-radius: 5px;
@@ -95,26 +95,30 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 60px;
     padding: 50px 0px;
 }
 
 .images {
     display: flex;
     justify-content: center;
-    gap: 16px;
+    gap: 30px;
 }
 
 .images div {
-    max-width: 135px;
+    max-width: 145px;
+    margin-bottom: 40px;
+
 }
 
 
 .content3 {
     background-color: #E5E7EB;
-    padding: 40px 60px; 
+    padding: 60px 80px; 
     display: flex;
     flex-direction: column;
     align-items: center;
+
 
 }
 
@@ -142,7 +146,13 @@ button {
 }
 
 
+
+
+
 /*  3. Components  */
+
+
+
 
 .logo {
     font-size: 24px;
@@ -159,14 +169,18 @@ button {
 .placeholder {
     background-color: #7b838f;;
     color: #F9FAF8;
-    padding: 85px 70px;
+    padding: 85px 120px;
 }
 
 .information {
     color: #1F2937;
     font-size: 36px;
     font-weight: 800;
-    margin: 20px auto;
+    margin: 30px auto;
+    text-align: center;
+}
+
+.subtext {
     text-align: center;
 }
 
@@ -183,7 +197,7 @@ button {
 .author {
     align-self: flex-end;
     font-weight: bold;
-    margin-right: 50px;
+   
 }
 
 .action button {
